Telegram and Mailer APIs added

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "googleapis": "^41.0.1",
+    "node-telegram-bot-api": "^0.30.0",
+    "nodemailer": "^6.3.0"
   },
   "engines": {
     "node": "10.4.1"
