--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "To serve some rest API end points for all common services",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":""
   },
   "repository": {
     "type": "git",
