--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "googleapis": "^41.0.1",
+    "node-fetch": "^2.6.1",
     "node-telegram-bot-api": "^0.30.0",
     "nodemailer": "^6.3.0"
   },
