--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To serve some rest API end points for all common services",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
     "build": ""
   },
   "repository": {
@@ -24,7 +24,9 @@
     "googleapis": "^41.0.1",
     "node-fetch": "^2.6.1",
     "node-telegram-bot-api": "^0.30.0",
-    "nodemailer": "^6.3.0"
+    "nodemailer": "^6.3.0",
+    "socket.io": "^2.3.0",
+    "uuid": "^8.3.1"
   },
   "engines": {
     "node": "10.4.1"
