--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "node-telegram-bot-api": "^0.30.0",
     "nodemailer": "^6.3.0",
     "socket.io": "^2.3.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "vm2": "^3.9.2"
   },
   "engines": {
     "node": "10.4.1"
